[gd_scene load_steps=22 format=3 uid="uid://cwy6n0rcecf4m"]

[ext_resource type="PackedScene" uid="uid://duf4bf7b442q5" path="res://characters/player/player.tscn" id="1_dphjl"]
[ext_resource type="Script" uid="uid://d28prupunmikh" path="res://scenes/world/world.gd" id="1_t5ptc"]
[ext_resource type="Texture2D" uid="uid://danc2worq1cc6" path="res://assets/sprites/tilesets/plains.png" id="2_sl2e5"]
[ext_resource type="Texture2D" uid="uid://jypw60nwk4s1" path="res://assets/sprites/tilesets/grass.png" id="3_1fp7r"]
[ext_resource type="Texture2D" uid="uid://toknbuaae5dd" path="res://assets/sprites/tilesets/decor_16x16.png" id="4_6m72w"]
[ext_resource type="Texture2D" uid="uid://dnu5d7slo6b4a" path="res://assets/sprites/tilesets/objects.png" id="5_v5dby"]
[ext_resource type="AudioStream" uid="uid://c5x0fwxfk6gx5" path="res://assets/music/2019-12-09_-_Retro_Forest_-_David_Fesliyan.mp3" id="7_bq33v"]
[ext_resource type="Script" uid="uid://4kqxbwpx6mxm" path="res://scenes/world/menu_panel.gd" id="8_j2gmx"]
[ext_resource type="Texture2D" uid="uid://wfj25ongjxbc" path="res://characters/player/sprites/player.png" id="9_1yooq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1fp7r"]
texture = ExtResource("2_sl2e5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6m72w"]
texture = ExtResource("3_1fp7r")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v5dby"]
texture = ExtResource("4_6m72w")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t5ptc"]
texture = ExtResource("5_v5dby")
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 17
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, 12, 12, 12, 28, -12, 28)
3:5/size_in_atlas = Vector2i(3, 4)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, 12, 12, 12, 28, -12, 28)
6:6/size_in_atlas = Vector2i(2, 1)
6:6/0 = 0
6:6/0/y_sort_origin = -6
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, 0, 16, 8, -16, 8)
6:5/size_in_atlas = Vector2i(2, 1)
6:5/0 = 0
6:5/0/y_sort_origin = -6
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, 0, 16, 8, -16, 8)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 4, 16, 4, 16, 16, -16, 16)
6:9/size_in_atlas = Vector2i(3, 1)
6:9/0 = 0
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 16, -8, 20, 8, 20, 8, 16)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:5/size_in_atlas = Vector2i(2, 2)
10:5/0 = 0
9:5/0 = 0
8:5/0 = 0
9:2/size_in_atlas = Vector2i(1, 2)
9:2/0 = 0
10:3/0 = 0
10:2/0 = 0
11:2/size_in_atlas = Vector2i(1, 2)
11:2/0 = 0
12:2/size_in_atlas = Vector2i(1, 2)
12:2/0 = 0
11:4/0 = 0
10:4/0 = 0
9:4/0 = 0
3:9/size_in_atlas = Vector2i(3, 4)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, 12, 12, 12, 28, -12, 28)
0:9/size_in_atlas = Vector2i(3, 4)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, 12, 12, 12, 28, -12, 28)
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/size_in_atlas = Vector2i(2, 1)
3:1/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
11:0/0 = 0
10:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSet" id="TileSet_4rhad"]
physics_layer_0/collision_layer = 4
sources/0 = SubResource("TileSetAtlasSource_1fp7r")
sources/1 = SubResource("TileSetAtlasSource_6m72w")
sources/2 = SubResource("TileSetAtlasSource_v5dby")
sources/3 = SubResource("TileSetAtlasSource_t5ptc")

[sub_resource type="AtlasTexture" id="AtlasTexture_gb53w"]
atlas = ExtResource("9_1yooq")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qq27"]
atlas = ExtResource("9_1yooq")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlabj"]
atlas = ExtResource("9_1yooq")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_srmg5"]
atlas = ExtResource("9_1yooq")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_umvgx"]
atlas = ExtResource("9_1yooq")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxkvs"]
atlas = ExtResource("9_1yooq")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_m114p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb53w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qq27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlabj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srmg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umvgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxkvs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="World" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_t5ptc")
random_encounter = false

[node name="Player" parent="." instance=ExtResource("1_dphjl")]
z_index = 2
position = Vector2(760, 420)

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
y_sort_enabled = true
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_4rhad")
format = 2
layer_0/name = "ground"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(655370, 131072, 0, 589835, 65536, 1, 655371, 327680, 1, 589836, 131072, 1, 655369, 131072, 0, 655368, 131072, 0, 655367, 131072, 0, 655366, 131072, 0, 786438, 131072, 2, 786439, 131072, 2, 786440, 131072, 2, 786441, 131072, 2, 786442, 131072, 2, 786443, 131072, 2, 786444, 131072, 2, 786445, 196608, 2, 720909, 196608, 1, 655373, 262144, 0, 655374, 131072, 2, 655375, 131072, 2, 524301, 131072, 0, 524302, 131072, 0, 524303, 131072, 0, 524304, 131072, 0, 524300, 131072, 0, 524305, 131072, 0, 655376, 131072, 2, 655377, 131072, 2, 720908, 131072, 1, 524306, 327680, 1, 589837, 131072, 1, 589838, 131072, 1, 589839, 131072, 1, 589840, 131072, 1, 589841, 131072, 1, 655372, 131072, 1, 720907, 131072, 1, 720906, 131072, 1, 720905, 131072, 1, 720904, 131072, 1, 720903, 131072, 1, 720902, 131072, 1, 524299, 65536, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 786446, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 851984, 1, 0, 851983, 1, 0, 786447, 1, 0, 786448, 1, 0, 589834, 1, 0, 589833, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 458762, 1, 0, 458761, 1, 0, 458760, 1, 0, 458759, 1, 0, 458758, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 720914, 1, 0, 786450, 1, 0, 851986, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 655380, 196608, 2, 655378, 131072, 2, 655379, 131072, 2, 589844, 262144, 0, 524308, 131072, 1, 458772, 262144, 1, 393236, 196608, 1, 327700, 196608, 1, 262164, 196608, 1, 458770, 65536, 1, 393234, 65536, 1, 327698, 65536, 1, 262162, 65536, 1, 393233, 1, 0, 393232, 1, 0, 393231, 1, 0, 393230, 1, 0, 393229, 1, 0, 393228, 1, 0, 393227, 1, 0, 393226, 1, 0, 393225, 1, 0, 393224, 1, 0, 393223, 1, 0, 393222, 1, 0, 327686, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 327696, 1, 0, 327695, 1, 0, 327694, 1, 0, 327693, 1, 0, 327692, 1, 0, 327691, 1, 0, 327690, 1, 0, 327689, 1, 0, 327688, 1, 0, 327687, 1, 0, 327697, 1, 0, 262161, 1, 0, 720916, 1, 0, 786452, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 786454, 1, 0, 720918, 1, 0, 720917, 1, 0, 786453, 1, 0, 786455, 1, 0, 720919, 1, 0, 655382, 1, 0, 655381, 1, 0, 589845, 131072, 2, 524309, 131072, 1, 458773, 131072, 0, 393237, 1, 0, 327701, 1, 0, 262165, 1, 0, 327702, 1, 0, 393238, 1, 0, 458774, 131072, 0, 524310, 131072, 1, 589846, 131072, 2, 655383, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 786459, 1, 0, 720923, 1, 0, 655387, 1, 0, 589851, 131072, 2, 524315, 131072, 1, 458779, 131072, 0, 458778, 131072, 0, 393242, 1, 0, 327706, 1, 0, 262170, 1, 0, 262169, 1, 0, 262168, 1, 0, 262167, 1, 0, 262166, 1, 0, 458775, 131072, 0, 524311, 131072, 1, 589847, 131072, 2, 655384, 1, 0, 720920, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 720922, 1, 0, 655386, 1, 0, 589850, 131072, 2, 524314, 131072, 1, 720921, 1, 0, 458776, 131072, 0, 393240, 1, 0, 327704, 1, 0, 327703, 1, 0, 393241, 1, 0, 458777, 131072, 0, 524313, 131072, 1, 524312, 131072, 1, 589848, 131072, 2, 393239, 1, 0, 327705, 1, 0, 589849, 131072, 2, 655385, 1, 0, 393243, 1, 0, 327707, 1, 0, 262171, 1, 0, 589829, 1, 0, 524293, 1, 0, 458757, 1, 0, 393221, 1, 0, 327685, 1, 0, 262149, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524291, 1, 0, 524292, 1, 0, 589828, 1, 0, 458755, 1, 0, 393219, 1, 0, 327683, 1, 0, 262147, 1, 0, 262146, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 1, 0, 327682, 1, 0, 458753, 1, 0, 262144, 1, 0, 327680, 1, 0, 524289, 1, 0, 655365, 131072, 0, 655364, 131072, 0, 655363, 131072, 0, 655362, 131072, 0, 655361, 131072, 0, 655360, 131072, 0, 786437, 131072, 2, 786436, 131072, 2, 786435, 131072, 2, 786434, 131072, 2, 786433, 131072, 2, 786432, 131072, 2, 720901, 131072, 1, 720900, 131072, 1, 720899, 131072, 1, 720898, 131072, 1, 720897, 131072, 1, 720896, 131072, 1, 851973, 1, 0, 851972, 1, 0, 851971, 1, 0, 851970, 1, 0, 851969, 1, 0, 851968, 1, 0, 589842, 131072, 1, 589843, 131072, 1, 524307, 131072, 1, 458771, 131072, 1, 393235, 131072, 1, 327699, 131072, 1, 262163, 131072, 1, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 131089, 1, 0, 65553, 1, 0, 17, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, 13, 1, 0, 12, 1, 0, 11, 1, 0, 10, 1, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 1, 1, 0, 0, 1, 0, -65536, 1, 0, 65536, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 65552, 1, 0, 65551, 1, 0, 65550, 1, 0, 65549, 1, 0, 65548, 1, 0, 65547, 1, 0, 65546, 1, 0, 65545, 1, 0, 65544, 1, 0, 65543, 1, 0, 65542, 1, 0, 65541, 1, 0, 65540, 1, 0, 65539, 1, 0, 65538, 1, 0, 65537, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, 196629, 1, 0, 131093, 1, 0, 65557, 1, 0, 21, 1, 0, -65515, 1, 0, -65514, 1, 0, 22, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 131099, 1, 0, 65563, 1, 0, 27, 1, 0, -65509, 1, 0, -65510, 1, 0, -65511, 1, 0, -65512, 1, 0, -65513, 1, 0, 131098, 1, 0, 131097, 1, 0, 131096, 1, 0, 131095, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 65562, 1, 0, 65561, 1, 0, 65560, 1, 0, 65559, 1, 0, 196626, 65536, 1, 131090, 65536, 1, 65554, 65536, 1, 18, 65536, 1, -65518, 65536, 1, 131092, 196608, 1, 196628, 196608, 1, 65556, 196608, 1, 20, 196608, 1, -65516, 196608, 1, 196627, 131072, 1, 131091, 131072, 1, 65555, 131072, 1, 19, 131072, 1, -65517, 131072, 1)
layer_1/name = "ground_decoration"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(720905, 2, 4, 720900, 196610, 4, 589836, 196610, 4, 655372, 131074, 4, 589842, 131074, 4, 524309, 131074, 4, 327699, 196610, 4, 524313, 196610, 4, 524294, 131074, 1, 524289, 196610, 1, 524293, 196610, 1, 327693, 196610, 1, 327691, 131074, 1, 786453, 2, 3, 786452, 2, 3, 720919, 2, 3, 720920, 2, 3, 720918, 2, 3, 458769, 131074, 2, 393237, 131074, 2, 589833, 196610, 2, 786448, 131074, 1, 393223, 196610, 0, 327684, 196610, 0, 19, 2, 4, 65544, 65538, 1, 131078, 196610, 0, 131074, 196610, 0, 131096, 196610, 0, 327705, 131074, 0, 22, 2, 0)
layer_2/name = "objects"
layer_2/y_sort_enabled = true
layer_2/z_index = 3
layer_2/tile_data = PackedInt32Array(65549, 196611, 5, 196614, 196611, 9, 262160, 393219, 6, 327702, 393219, 5, 786458, 655363, 7, 393231, 393219, 7, 327681, 524291, 6, 196608, 524291, 6, 131094, 393219, 7, 720914, 393219, 7)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(4, 83, 1, 490, 534, 490, 534, 395, 871, 395, 872, -48, 3, -45)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-2, 614, 653, 610, 653, 520, 988, 522, 990, 467, 1343, 467, 1343, 670, -6, 672)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(992, -49, 996, 347, 1343, 343, 1343, -51)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_bq33v")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1345.0
offset_bottom = 672.0

[node name="MenuPanel" type="Panel" parent="HUD"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_j2gmx")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuLinksPanel" type="Panel" parent="HUD/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="MenuContentPanel" type="Panel" parent="HUD/MenuPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
position = Vector2(101, 79)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_m114p")
autoplay = "default"
flip_h = true

[node name="PlayerNameLabel" type="Label" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
layout_mode = 0
offset_left = 238.0
offset_top = 28.0
offset_right = 287.0
offset_bottom = 51.0
text = "Player"

[node name="PlayerHealthLabel" type="Label" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
layout_mode = 0
offset_left = 237.0
offset_top = 64.0
offset_right = 476.0
offset_bottom = 106.0
theme_override_font_sizes/font_size = 30
text = "PV 15/20"
horizontal_alignment = 3

[node name="PlayerLevelLabel" type="Label" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
layout_mode = 0
offset_left = 238.0
offset_top = 114.0
offset_right = 474.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 30
text = "NVL 2"
horizontal_alignment = 3

[node name="PlayerNextLevelLabel" type="Label" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
layout_mode = 0
offset_left = 563.0
offset_top = 113.0
offset_right = 800.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 30
text = "Próximo 200"
horizontal_alignment = 3

[node name="PlayerAttackLabel" type="Label" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
layout_mode = 0
offset_left = 239.0
offset_top = 166.0
offset_right = 474.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 30
text = "Ataque 5"
horizontal_alignment = 3

[node name="PlayerDefenseLabel" type="Label" parent="HUD/MenuPanel/HBoxContainer/MenuContentPanel"]
layout_mode = 0
offset_left = 564.0
offset_top = 166.0
offset_right = 799.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 30
text = "Defesa 5"
horizontal_alignment = 3

[connection signal="body_entered" from="Area2D" to="." method="_on_monster_area_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_monster_area_exited"]
